--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav mx-auto my-2 my-lg-0 navbar-nav-scroll " style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                        <a class="nav-link  link-light" aria-current="page"  th:href="@{/static}">Inicio</a>
+                        <a class="nav-link  link-light" aria-current="page"  th:href="@{/}">Inicio</a>
                     </li>
 
                     <li class="nav-item dropdown">
